fixed padding spacing of the contact div

--- a/css/custom.css
+++ b/css/custom.css
@@ -323,8 +323,8 @@
 }
 
 #contact {
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 100px;
+  padding-bottom: 300px;
 }
 
 #contact .contact-links {
